implémentations de quelques fonctions de service et ajout d une modification à la fonction de suppression d un ad
